Bug 437556 Mailnews crashes while importing an address book if a field map is required but not set. p=Josh Geenen <joshgeenen+bugzilla@gmail.com>,r=me,sr=bienvenu